# AllAVManager

./: .gitignore  DEVLOG.md  README.md  开发日志.md  开发规则.md  开发进度分析_2026-07-14.md
MDCX-Server/: .dockerignore  .env.example  .gitignore  Dockerfile  VERSION.json  _test_p0.py  _test_verify.py  docker-compose.advanced.yml  docker-compose.yml  docker-entrypoint.sh  migrate_patches_output_dir.py  package.json  pyproject.toml  pytest.ini  requirements-mnamer.txt  requirements-optional.txt  requirements.txt  run.py
MDCX-Server/app/: __init__.py  asgi.py  constants.py  deploy_tiers.py  exceptions.py  main.py
MDCX-Server/app/api/: __init__.py  auth_middleware.py
MDCX-Server/app/api/routes/: __init__.py  actors.py  auth.py  auto_organize.py  backup.py  chinese_routes.py  cloud_drive2.py  compare.py  config.py  cookiecloud.py  crawlers.py  deploy.py  download.py  downloaders.py  emby_compat.py  emby_config.py  emby_push.py  face_crop.py  fanart.py  favorites.py  fc2_routes.py  file_organize.py  files.py  gfriends.py  (+53 more)
MDCX-Server/app/config/: __init__.py  defaults.yaml  manager.py  models.py  module_models.py  site_registry.py  site_switchers.py
MDCX-Server/app/crawlers/: __init__.py  avmoo.py  avsox.py  base.py  dmm.py  fanart.py  fc2.py  fc2_extended.py  fc2_extended_detail.py  fc2club.py  fc2ppvdb.py  javbus.py  javdatabase.py  javdb.py  javdb_enhancer.py  legacy_adapter.py  pornhub.py  provider.py  uncensored.py  uncensored_detail.py  yaml_loader.py
MDCX-Server/app/db/: __init__.py  cache.py  chinese_models.py  database.py  fc2_models.py  migrations.py  models.py  module_db.py  pornhub_models.py  uncensored_models.py  western_models.py
MDCX-Server/app/importer/: __init__.py  image_scanner.py  nfo_parser.py  number_matcher.py  sync.py
MDCX-Server/app/output/: __init__.py  images.py  nfo.py
MDCX-Server/app/patcher/: __init__.py  detector.py  engine.py  reporter.py  skipper.py  strategy.py
MDCX-Server/app/scraper/: __init__.py  actor_avatar.py  actor_profile.py  actor_profile_scrapers.py  comparator.py  context.py  engine.py  episode.py  folder_actor.py  iafd_scraper.py  llm_scraper.py  merger.py  number.py  post_handlers.py  wikipedia_scraper.py  workflow.py
MDCX-Server/app/services/: actor_subscription.py  aria2_downloader.py  backup.py  chapter_marker.py  cloud_drive2.py  cookiecloud.py  dedup.py  domain_switcher.py  download_tracker.py  downloader.py  downloader_manager.py  face_crop.py  ffmpeg_thumbnail.py  file_organize.py  fingerprint.py  gfriends_importer.py  gif_generator.py  haijiao_adapter.py  magnet_extractor.py  metrics.py  mnamer_engine.py  mosaic.py  movie_graph.py  mpv_player.py  naming.py  naming_engine.py  naming_mnamer_bridge.py  network_diag.py  nfo_scraper.py  pan_115.py  plugin_loader_crawler.py  plugin_loader_organizer.py  plugin_loader_translate.py  plugin_manager.py  post_process.py  poster_enhancer.py  proxy_manager.py  proxy_parser.py  proxy_player.py  proxy_speedtest.py  (+25 more)
MDCX-Server/app/tasks/: __init__.py  base_scanner.py  chinese_scanner.py  fc2_scanner.py  organizer.py  pornhub_scanner.py  queue.py  scanner.py  scheduled.py  scheduler.py  uncensored_scanner.py  western_scanner.py  worker.py
MDCX-Server/app/utils/: __init__.py  bin_tools.py  browser_fingerprint.py  cf_bypass.py  cookie_login.py  cookie_manager.py  emby.py  face_crop.py  file_attrs.py  http_client.py  i18n.py  log_config.py  logger.py  manual_data.py  media_helpers.py  mosaic.py  network.py  number_map.py  proxy_free.py  schema_widget.py  stealth_fetcher.py  translate.py  translate_extra.py  tray.py  webhook.py
MDCX-Server/deploy/kubernetes/: mdcx.yaml
MDCX-Server/deploy/nginx/: nginx-http.conf  nginx.conf
MDCX-Server/deploy/systemd/: mdcx.service
MDCX-Server/static/: index.html
MDCX-Server/static/assets/: ActorDetail-3jMfiY1L.js  ActorDetail-8BMNc1G8.js  ActorDetail-B04U-M4q.js  ActorDetail-B2c7QY9f.js  ActorDetail-B3gEHOZo.js  ActorDetail-BAdUpGAD.js  ActorDetail-BBEVyAD0.js  ActorDetail-BDC9XNyy.js  ActorDetail-BDgLuoHk.js  ActorDetail-BGMUAGyd.js  ActorDetail-BGipyh3d.js  ActorDetail-BGjcyBqY.js  ActorDetail-BHhlZ1Hy.js  ActorDetail-BKkqNAbQ.js  ActorDetail-BL3eOhoO.css  ActorDetail-BMspGCVf.js  ActorDetail-BMwvQeec.js  ActorDetail-BN46GUlA.js  ActorDetail-BN69Kz4H.js  ActorDetail-BQM9Y0kW.js  ActorDetail-BYwuC4T3.js  ActorDetail-Bep5v5lN.js  ActorDetail-Bezmy3E9.js  ActorDetail-Bw6wQNEO.js  ActorDetail-BxZueXnL.css  ActorDetail-ByBV23SM.js  ActorDetail-C1HvQh7S.js  ActorDetail-C2yLWkx6.js  ActorDetail-CUBHisHB.js  ActorDetail-CaTOMEUu.js  ActorDetail-CcETdtHP.js  ActorDetail-CdWNUIEG.css  ActorDetail-CeN3uUsf.js  ActorDetail-CfHTr0T2.css  ActorDetail-Ciwi4uZD.js  ActorDetail-Ckgp3yCF.js  ActorDetail-CpGKkH0B.css  ActorDetail-Cs3aMQA1.css  ActorDetail-CsjyonM2.js  ActorDetail-CxqKJbbG.js  (+1560 more)
MDCX-Server/tests/: conftest.py  test_number_v3.py
MDCX-Server/tests/integration/: test_mnamer_file_organize.py
MDCX-Server/tests/unit/: test_exceptions.py  test_merger_javsp.py  test_mnamer_api.py  test_mnamer_engine.py  test_post_handlers.py  test_unified_manager.py
(+215 files in other folders)
