# MDCX-Server 项目配置(借鉴 mnamer + OpenAver)
# =====================================================================
# 保留 requirements.txt 作为运行时依赖 allowlist(OpenAver 模式),
# 本文件主要承担 [tool.*] 段配置 + PEP 621 元数据。
# =====================================================================

[project]
name = "mdcx-server"
description = "MDCX 媒体元数据管理服务端(FastAPI + Pydantic v2 + SQLAlchemy 2.x async)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "MDCX Team" },
]
keywords = ["jav", "metadata", "scraper", "fastapi", "emby", "jellyfin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/mdcx-server/mdcx-server"
Documentation = "https://github.com/mdcx-server/mdcx-server/blob/main/README.md"
Repository = "https://github.com/mdcx-server/mdcx-server"
Issues = "https://github.com/mdcx-server/mdcx-server/issues"

# =====================================================================
# 构建系统
# =====================================================================
[build-system]
requires = ["setuptools >= 61.0.0", "setuptools_scm[toml] >= 6.2", "wheel"]
build-backend = "setuptools.build_meta"

# setuptools_scm: 从 git tag 自动生成版本号,写入 app/__version__.py
# (文件由构建时自动生成,不入版本控制;运行时 from app.__version__ import __version__)
[tool.setuptools_scm]
local_scheme = "dirty-tag"
write_to = "app/__version__.py"
write_to_template = """# file generated by setuptools_scm
__version__ = \"{version}\"
"""

[tool.setuptools]
packages = ["app"]

# =====================================================================
# Ruff 代码风格(借鉴 OpenAver + mnamer)
# =====================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    "data",
    "logs",
    "backups",
    "cache",
    "GitHub-ZIP",
    "MDCX-Desktop",
    "MDCX-Web",
]

[tool.ruff.lint]
# 借鉴 OpenAver + mnamer 的 ruff 规则集
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear(包含 B904 raise...from)
    "UP",     # pyupgrade
    "T201",   # flake8-print(发现 print 残留)
    "S110",   # try-except-pass(no bare except pass)
    "S112",   # try-except-continue
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long(用 line-length 控制,不强制报错)
    "B008",    # function call in default argument(FastAPI Depends 常用)
    "B904",    # raise...from(先 relax,后续逐文件修复)
    "SIM117",  # 嵌套 with(可读性优先)
    "UP007",   # X | Y → Union[X, Y](Pydantic v1 兼容期保留)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T201"]  # 测试代码允许 print
"app/db/models.py" = ["E501"]  # ORM 模型字段声明行长可放宽

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-sort-within-sections = true

# =====================================================================
# Pytest(借鉴 OpenAver + mnamer)
# =====================================================================
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"
markers = [
    "unit: 纯单元测试,无 IO 副作用",
    "integration: 集成测试,使用 mock 不打真实站点",
    "smoke: 真实站点连通性检查(deselect with '-m \"not smoke\"')",
    "e2e: 端到端测试,需要真实文件系统",
    "slow: 慢测试(>1s)",
]
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore::DeprecationWarning:passlib.*",
]

# =====================================================================
# Coverage 覆盖率(借鉴 OpenAver .coveragerc)
# =====================================================================
[tool.coverage.run]
source = ["app"]
omit = [
    "app/api/routes/*",  # FastAPI routes 由 integration test 覆盖
    "app/__version__.py",
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 40  # 渐进式提升,先设 40% 基线
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

# =====================================================================
# Mypy 类型检查(渐进式引入)
# =====================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = false  # 渐进式,先关闭
warn_unused_configs = true
disallow_untyped_defs = false  # 渐进式,先关闭
ignore_missing_imports = true
exclude = [
    "data/",
    "logs/",
    "GitHub-ZIP/",
    "MDCX-Desktop/",
    "MDCX-Web/",
    "tests/",
]
